--- a/LegalApp/Components/Layout/NavMenu.razor
+++ b/LegalApp/Components/Layout/NavMenu.razor
@@ -10,15 +10,15 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Legal Advisor
             </NavLink>
         </div>
-       @*  <div class="nav-item px-3">
-            <NavLink class="nav-link" href="dashboard">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+       <div class="nav-item px-3">
+            <NavLink class="nav-link" href="sqlrag">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> RAG
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+        @*  <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Legal AI Advisor
             </NavLink>
